more persistent data extraction, and enum updates